# kenverters

./: .coveragerc  .gitignore  .pydocstyle  .pydocstyle_test  .pylintrc  AUTHORS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  github-actions-ci.yml
kensho_kenverters/: CHANGELOG.md  constants.py  convert_output.py  convert_output_visual_formatted.py  extract_output_models.py  output_to_sections.py  output_to_tables.py  table_to_text_objects.py  tables_utils.py  utils.py
kensho_kenverters/tests/: test_changelog_updated.py  test_convert_output.py  test_convert_output_visual_formatted.py  test_output_to_sections.py  test_output_to_tables.py  test_table_to_text_objects.py  test_tables_utils.py
kensho_kenverters/tests/data/: extract_output.json  extract_output_char_offsets.json  extract_output_figure_extraction.json  extract_output_hierarchical.json  extract_output_hierarchical_v2.json  extract_output_item_relations.json  extract_output_no_locs.json  output_multi_page_locs.json  visually_converted_output.txt  visually_converted_resized_output.txt
scripts/: copyright_line_check.sh  lint.sh  test.sh
