[metadata]
description_file = README.md

[isort]
profile = black
multi_line_output = 3
line_length = 100
lines_after_imports = 2
force_sort_within_sections = 1

[flake8]
max_line_length = 100
show_source = True
inline_quotes = single
multiline_quotes = '''
docstring_quotes = """
select =
    E,
    F,
    W,
    Q,
    T
ignore =
    W503,
    W504
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache
    .env
    env
    .venv
    venv
